--- a/MiniC#/nbproject/project.properties
+++ b/MiniC#/nbproject/project.properties
@@ -33,7 +33,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${libs.JFlex.classpath}
+    ${libs.JFlex.classpath}:\
+    ${libs.JCup.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
